{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 61,
  "lineage": "b0a1d6c8-ed31-57c8-16c0-6bfed4cac5d2",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:670154208195:security-group/sg-0bcb498da0c514346",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0bcb498da0c514346",
            "ingress": [],
            "name": "user09-eks-cluster-cluster-2025041010403437920000000c",
            "name_prefix": "user09-eks-cluster-cluster-",
            "owner_id": "670154208195",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "user09-eks-cluster-cluster",
              "application": "user09",
              "environment": "development"
            },
            "tags_all": {
              "Name": "user09-eks-cluster-cluster",
              "application": "user09",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1d13e02a1821569"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:670154208195:security-group/sg-063b8fc55038786e6",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-063b8fc55038786e6",
            "ingress": [],
            "name": "user09-eks-cluster-node-20250410104033957900000009",
            "name_prefix": "user09-eks-cluster-node-",
            "owner_id": "670154208195",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "user09-eks-cluster-node",
              "application": "user09",
              "environment": "development",
              "kubernetes.io/cluster/user09-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "user09-eks-cluster-node",
              "application": "user09",
              "environment": "development",
              "kubernetes.io/cluster/user09-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1d13e02a1821569"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-851234692",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bcb498da0c514346",
            "security_group_rule_id": "sgr-0e2a4dc5998299f9a",
            "self": false,
            "source_security_group_id": "sg-063b8fc55038786e6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-716696982",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-063b8fc55038786e6",
            "security_group_rule_id": "sgr-0b488c63ce5c07ef6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-579083124",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-063b8fc55038786e6",
            "security_group_rule_id": "sgr-0dc1f7870c896bb26",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2129677706",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b8fc55038786e6",
            "security_group_rule_id": "sgr-091f3ace7ede052a2",
            "self": false,
            "source_security_group_id": "sg-0bcb498da0c514346",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-949125127",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b8fc55038786e6",
            "security_group_rule_id": "sgr-03fb504c35ecd0921",
            "self": false,
            "source_security_group_id": "sg-0bcb498da0c514346",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-237967471",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b8fc55038786e6",
            "security_group_rule_id": "sgr-044ade86844bfedb5",
            "self": false,
            "source_security_group_id": "sg-0bcb498da0c514346",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-494085200",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b8fc55038786e6",
            "security_group_rule_id": "sgr-0417bfeed04688157",
            "self": false,
            "source_security_group_id": "sg-0bcb498da0c514346",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2043811717",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b8fc55038786e6",
            "security_group_rule_id": "sgr-01e60cc622c43e72b",
            "self": false,
            "source_security_group_id": "sg-0bcb498da0c514346",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-401847840",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b8fc55038786e6",
            "security_group_rule_id": "sgr-02172d35a05d65571",
            "self": false,
            "source_security_group_id": "sg-0bcb498da0c514346",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1126799150",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b8fc55038786e6",
            "security_group_rule_id": "sgr-0a011c1643001aa44",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1771174576",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b8fc55038786e6",
            "security_group_rule_id": "sgr-0b2c6fb55838f97eb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-842114721",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-063b8fc55038786e6",
            "security_group_rule_id": "sgr-050fcb987081fd08b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:670154208195:network-acl/acl-010839c80127d3cdd",
            "default_network_acl_id": "acl-010839c80127d3cdd",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-010839c80127d3cdd",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "670154208195",
            "subnet_ids": [
              "subnet-08df2e8a4ce33654a",
              "subnet-0bb33719bd879d81e",
              "subnet-0bdafc9e3e036f487",
              "subnet-0c99c5118d0439304",
              "subnet-0d86ceec464bb46d2",
              "subnet-0e99ae3afd7bc4acc"
            ],
            "tags": {
              "Name": "user09-vpc-default",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "user09-vpc-default",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b1d13e02a1821569"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:670154208195:route-table/rtb-01b6cd04d406cf777",
            "default_route_table_id": "rtb-01b6cd04d406cf777",
            "id": "rtb-01b6cd04d406cf777",
            "owner_id": "670154208195",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "user09-vpc-default",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "user09-vpc-default",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b1d13e02a1821569"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:670154208195:security-group/sg-092927ed79104ee1f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-092927ed79104ee1f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "670154208195",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "user09-vpc-default",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "user09-vpc-default",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b1d13e02a1821569"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ef4473c22b11dbf",
            "arn": "arn:aws:ec2:us-west-1:670154208195:elastic-ip/eipalloc-09ef4473c22b11dbf",
            "domain": "vpc",
            "id": "eipalloc-09ef4473c22b11dbf",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-151-110-98.us-west-1.compute.amazonaws.com",
            "public_ip": "54.151.110.98",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "user09-vpc-us-west-1a",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "user09-vpc-us-west-1a",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:670154208195:internet-gateway/igw-08ec6331d77061279",
            "id": "igw-08ec6331d77061279",
            "owner_id": "670154208195",
            "tags": {
              "Name": "user09-vpc",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "user09-vpc",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b1d13e02a1821569"
          },
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ef4473c22b11dbf",
            "association_id": "eipassoc-0bf7f78bb7d7a0094",
            "connectivity_type": "public",
            "id": "nat-08636271c2ea9733b",
            "network_interface_id": "eni-013f986c165a7db85",
            "private_ip": "10.0.101.77",
            "public_ip": "54.151.110.98",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bb33719bd879d81e",
            "tags": {
              "Name": "user09-vpc-us-west-1a",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "user09-vpc-us-west-1a",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_eip.nat",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fc5c4c9af4e0ebfe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08636271c2ea9733b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc5c4c9af4e0ebfe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_eip.nat",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_nat_gateway.this",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08ec6331d77061279",
            "id": "r-rtb-0ab48cdcd7ac853131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ab48cdcd7ac85313",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:670154208195:route-table/rtb-0fc5c4c9af4e0ebfe",
            "id": "rtb-0fc5c4c9af4e0ebfe",
            "owner_id": "670154208195",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "user09-vpc-private",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "user09-vpc-private",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1d13e02a1821569"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:670154208195:route-table/rtb-0ab48cdcd7ac85313",
            "id": "rtb-0ab48cdcd7ac85313",
            "owner_id": "670154208195",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "user09-vpc-public",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "user09-vpc-public",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1d13e02a1821569"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fe828e5a3f3a921",
            "route_table_id": "rtb-0fc5c4c9af4e0ebfe",
            "subnet_id": "subnet-0e99ae3afd7bc4acc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.private",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0993e10c21f5d7f20",
            "route_table_id": "rtb-0fc5c4c9af4e0ebfe",
            "subnet_id": "subnet-08df2e8a4ce33654a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.private",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011db3b34a61a2905",
            "route_table_id": "rtb-0fc5c4c9af4e0ebfe",
            "subnet_id": "subnet-0c99c5118d0439304"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.private",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012ebc4f472fa07d2",
            "route_table_id": "rtb-0ab48cdcd7ac85313",
            "subnet_id": "subnet-0bb33719bd879d81e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023e68c6ade27c23b",
            "route_table_id": "rtb-0ab48cdcd7ac85313",
            "subnet_id": "subnet-0d86ceec464bb46d2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c68a7137f82366a",
            "route_table_id": "rtb-0ab48cdcd7ac85313",
            "subnet_id": "subnet-0bdafc9e3e036f487"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:670154208195:subnet/subnet-0e99ae3afd7bc4acc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e99ae3afd7bc4acc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "670154208195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user09-vpc-private-us-west-1a",
              "kubernetes.io/cluster/user09-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "user09-vpc-private-us-west-1a",
              "kubernetes.io/cluster/user09-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b1d13e02a1821569"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:670154208195:subnet/subnet-08df2e8a4ce33654a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08df2e8a4ce33654a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "670154208195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user09-vpc-private-us-west-1c",
              "kubernetes.io/cluster/user09-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "user09-vpc-private-us-west-1c",
              "kubernetes.io/cluster/user09-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b1d13e02a1821569"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:670154208195:subnet/subnet-0c99c5118d0439304",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c99c5118d0439304",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "670154208195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user09-vpc-private-us-west-1a",
              "kubernetes.io/cluster/user09-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "user09-vpc-private-us-west-1a",
              "kubernetes.io/cluster/user09-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b1d13e02a1821569"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:670154208195:subnet/subnet-0bb33719bd879d81e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb33719bd879d81e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "670154208195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user09-vpc-public-us-west-1a",
              "kubernetes.io/cluster/user09-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "user09-vpc-public-us-west-1a",
              "kubernetes.io/cluster/user09-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b1d13e02a1821569"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:670154208195:subnet/subnet-0d86ceec464bb46d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d86ceec464bb46d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "670154208195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user09-vpc-public-us-west-1c",
              "kubernetes.io/cluster/user09-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "user09-vpc-public-us-west-1c",
              "kubernetes.io/cluster/user09-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b1d13e02a1821569"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:670154208195:subnet/subnet-0bdafc9e3e036f487",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdafc9e3e036f487",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "670154208195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user09-vpc-public-us-west-1a",
              "kubernetes.io/cluster/user09-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "user09-vpc-public-us-west-1a",
              "kubernetes.io/cluster/user09-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b1d13e02a1821569"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:670154208195:vpc/vpc-0b1d13e02a1821569",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-010839c80127d3cdd",
            "default_route_table_id": "rtb-01b6cd04d406cf777",
            "default_security_group_id": "sg-092927ed79104ee1f",
            "dhcp_options_id": "dopt-f84aa49c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1d13e02a1821569",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b6cd04d406cf777",
            "owner_id": "670154208195",
            "tags": {
              "Name": "user09-vpc",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "user09-vpc",
              "kubernetes.io/cluster/user09-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}